[package]
name = "libos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
b0 = ["mmu-identity"]

[dependencies]
riscv = "0.10"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
mmu-identity = { path = "../mmu_identity", optional = true }