[package]
name = "b0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libos = { path = "../../libos", features = ["b0"] }
drv0 = { path = "../../drv0" }
drv1 = { path = "../../drv1" }
drv_common = { path = "../../drv_common" }

[build-dependencies]
cc = "1.0"